[project]
name = "free-threaded-python"
version = "1.0.0"
description = "Performance comparison between standard and free-threaded Python"
dependencies = [
    "numpy",
    "pandas", 
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
